fix: alignmetn for navbar

--- a/src/sass/partials/_landingPage.scss
+++ b/src/sass/partials/_landingPage.scss
@@ -102,6 +102,20 @@
     }
 }
 
+@media (max-width: 1100px) {
+    .landingPage {
+        .what-are-you-waiting-for {
+            .phone2 {
+                margin-bottom: -2rem;
+
+                img {
+                    width: 25rem;
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 768px) {
     .landingPage {
 
@@ -179,6 +193,18 @@
             left: 3rem;
             font-weight: 500;
             font-size: 15px;
+        }
+    }
+}
+
+@media (max-width: 400px) {
+    .landingPage {
+        .what-are-you-waiting-for {
+            .phone2 {
+                img {
+                    width: 250PX;
+                }
+            }
         }
     }
 }
